1)gave options like max, average, sum and default is latest value for displaying over text in charts 2)fixed the unit alignments and increased the widget height

--- a/webroot/common/ui/scss/contrail.custom.scss
+++ b/webroot/common/ui/scss/contrail.custom.scss
@@ -2138,7 +2138,12 @@ body {
         margin-left: 0px !important;
     }
     .value {
-        font-size: 21px !important;
+        line-height:18px;
+        font-size: 22px !important;
+    }
+    span {
+        font-size:16px !important;
+        color:#616161;
     }
 }
 .nv-multibar .nv-groups .nv-group {
@@ -2148,25 +2153,22 @@ body {
     .title {
         align-items: center;
         font-size: 12px;
-        margin-left: 15px;
         color: '#242424'
     }
-    .lbl-value-wrapper {
-        align-items: flex-end;
-        margin-right: 15px;
-        .lbl {
-            color: #9e9e9e;
-            font-size: 11px;
-            align-content: center;
+    .lbl {
+        color: #9e9e9e;
+        font-size: 11px;
+        align-content: center;
+        margin-top: 3px;
+    }
+    .value {
+        font-size: 28px;
+        line-height:18px;
+        .unit {
+            font-size: 22px;
         }
-        .value {
-            font-size: 30px;
-            .unit {
-                font-size: 16px;
-                margin-left: 3px;
-            }
-        }
-    }   
+    }
+    
 }
 .small-bar-line-bar-chart .nv-barsWrap{
     rect.nv-bar  {
@@ -2178,7 +2180,6 @@ body {
     padding: 0 !important;   
 }
 .item-container {
-
     .contrail-grid {
         display: block;
         margin: 5px 15px 5px 15px;
@@ -2265,8 +2266,11 @@ body {
         list-style-type: none;
     }
     li {
-        padding-right: 10px;
+        padding-right: 6px;
         padding-left: 5px;
         display: inline;
     }
+}
+.grid-stack-item-content .item-content {
+    padding: 15px;   
 }
